welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:3: error: ';' expected but ')' found.
	if (a>=13 && a<=19) || (b>=13 && b<=19) || (c>=13 && c<=19) || ((a>=13 && a<=19) && (b>=13 && b<=19)) || ((a>=13 && a<=19) && (c>=13 && c<=19)) || ((b>=13 && b<=19) && (c>=13 && c<=19)) || ((a>=13 && a<=19) && (c>=13 && c<=19) && (c>=13 && c<=19)))
                                                                                                                                                                                                                                                               ^